# ml-zoomcamp-2025-midterm-project

./: .dockerignore  Dockerfile  README.md  app.py  fly.toml  model.pkl  notebook.ipynb  predict.py  pyproject.toml  train.py
