[project]
name = "ml-zoomcamp-2025-midterm-project"
version = "0.1.0"
description = "Heart Disease Prediction ML Model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pip>=25.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[tool.setuptools]
py-modules = ["train", "predict", "app"]
